--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "watch": "npm-watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "postcss styles.css -o src/styles.css",
-    "dev": "concurrently \"npm run build && live-server src --port=8080\" \"npm run watch\""
+    "dev": "npx tailwindcss -i ./styles.css -o ./src/styles.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "concurrently": "^7.2.2",
-    "npm-watch": "^0.11.0"
+    "npm-watch": "^0.11.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   }
 }
